--- a/alunos/templates/aluno.html
+++ b/alunos/templates/aluno.html
@@ -1,119 +1,83 @@
+{% extends 'base.html' %}
 {% load static %}
+{% block content %}
 
-<!DOCTYPE html>
-<html lang="pt-BR">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <!-- Title -->
-    <title>MoreDevs2Blu</title>
-
-   <!-- Favicon -->
-   <link rel="icon" href="{% static 'img/core-img/faviconpython.ico' %}">
-
-   <!-- Stylesheet -->
-   <link rel="stylesheet" href="{% static 'site.css' %}">
-
-</head>
-
-<body>
-
-    {% include 'partials/header.html' %}
-
-    <!-- ##### Header Area Start ##### -->
-    {% include 'partials/menu.html' %}
-    <!-- ##### Header Area End ##### -->
-
-        <!-- Receipe Post Search -->
-        <div class="receipe-post-search mb-80">
-            <div class="container">
-                <form action="#" method="post">
-                    <div class="row">
-                        <div class="col-12 col-lg-5">
-                            <select name="select1" id="select1">
-                                <option value="1">Softskill</option>
-                                <option value="1">HardSkill</option>
-                                <option value="1">workspace</option>
-                            </select>
-                        </div>
-                        <div class="col-12 col-lg-2 text-right">
-                            <button type="submit" class="btn delicious-btn">Buscar</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-
-        <!-- Receipe Slider -->
-        <div class="container">
+<!-- Receipe Post Search -->
+<div class="receipe-post-search mb-80">
+    <div class="container">
+        <form action="#" method="post">
             <div class="row">
-                <div class="col-12">
-                    <div class="receipe-slider owl-carousel">
-                        <img src="{% static 'img/bg-img/escritorio.jpg' %}">
+                <div class="col-12 col-lg-5">
+                    <select name="select1" id="select1">
+                        <option value="1">Softskill</option>
+                        <option value="1">HardSkill</option>
+                        <option value="1">workspace</option>
+                    </select>
+                </div>
+                <div class="col-12 col-lg-2 text-right">
+                    <button type="submit" class="btn delicious-btn">Buscar</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<!-- Receipe Slider -->
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="receipe-slider owl-carousel">
+                <img src="{% static 'img/bg-img/escritorio.jpg' %}">
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Receipe Content Area -->
+<div class="receipe-content-area">
+    <div class="container">
+
+        <div class="row">
+            <div class="col-12 col-md-8">
+                <div class="receipe-headline my-5">
+                    <span>01 de janeiro, 2023</span>
+                    <h2>Nome do Aluno</h2>
+                    <div class="receipe-duration">
+                        <h6>habilidades: Backend</h6>
+                        <h6>comportamento: comunicativo</h6>
+                        <h6>workspace: Python</h6>
+                        <h6>Por: Pessoa</h6>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12 col-lg-8">
+                    <!-- Single Preparation Step -->
+                    <div class="single-preparation-step d-flex">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui.
+                            Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis.
+                            Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus. Orci varius
+                            natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+                    </div>
+                </div>
+
+                <!-- Ingredientes -->
+                <div class="col-12 col-lg-4">
+                    <div class="ingredients">
+                        <h4>Descrição proficional</h4>
+                        <div class="ingredients">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui.
+                                Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in
+                                iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus.
+                                Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                            </p>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        
-        <!-- Receipe Content Area -->
-        <div class="receipe-content-area">
-            <div class="container">
-
-                <div class="row">
-                    <div class="col-12 col-md-8">
-                        <div class="receipe-headline my-5">
-                            <span>01 de janeiro, 2023</span>
-                            <h2>Nome do Aluno</h2>
-                            <div class="receipe-duration">
-                                <h6>habilidades: Backend</h6>
-                                <h6>comportamento: comunicativo</h6>
-                                <h6>workspace: Python</h6>
-                                <h6>Por: Pessoa</h6>
-                            </div>
-                        </div>
-                    </div>
-
-                <div class="row">
-                    <div class="col-12 col-lg-8">
-                        <!-- Single Preparation Step -->
-                        <div class="single-preparation-step d-flex">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui. Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                        </div>
-                    </div>
-
-                    <!-- Ingredientes -->
-                    <div class="col-12 col-lg-4">
-                        <div class="ingredients">
-                            <h4>Descrição</h4>
-                            <div class="ingredients">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui. Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                            </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Ingredientes -->
-
-    <!-- ##### Footer Area Start ##### -->
-    {% include 'partials/footer.html' %}
-    <!-- ##### Footer Area Start ##### -->
-
-    <!-- ##### All Javascript Files ##### -->
-    <!-- jQuery-2.2.4 js -->
-    <script src="{% static 'js/jquery/jquery-2.2.4.min.js' %}"></script>
-    <!-- Popper js -->
-    <script src="{% static 'js/bootstrap/popper.min.js' %}"></script>
-    <!-- Bootstrap js -->
-    <script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
-    <!-- All Plugins js -->
-    <script src="{% static 'js/plugins/plugins.js' %}"></script>
-    <!-- Active js -->
-    <script src="{% static 'js/active.js' %}"></script>
-</body>
-
-</html>
+    </div>
+</div>
+{% endblock content %}
